src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Master Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software License Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Maintenance Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Maintenance Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <description>Calculates an annual value of contract based on whether estimated is based on monthly or annual cost estimates</description>
        <formula>CASE(Pricing_Calculation__c,
&quot;Annual&quot;, Estimated_Annual_Cost__c * 1,
&quot;Monthly&quot;, Estimated_Monthly_Cost__c  * 12,
&quot;No Cost&quot;, 0,
null)</formula>
        <inlineHelpText>Calculates total annual value of contract</inlineHelpText>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Cost__c</fullName>
        <inlineHelpText>Cost associated with an amendment, SOW, etc</inlineHelpText>
        <label>Associated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the contract renew automatically?</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Structure__c</fullName>
        <inlineHelpText>How is WGU billed under contract?</inlineHelpText>
        <label>Billing Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Project/SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Org__c</fullName>
        <inlineHelpText>Budget group responsible for contract</inlineHelpText>
        <label>Budget Org</label>
        <picklist>
            <controllingField>Responsible_Department__c</controllingField>
            <picklistValues>
                <fullName>D100 - Chief Information Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D101 - Software Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D102 - Infrastructure Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D103 - Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D104 - General IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D105 - Service Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D106 - Business Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D107 - Database Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Placement - BSHI (F102A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Placement - MBA (F102A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Placement - Nursing (F102A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Placement - Teachers (F102A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar (F102)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Services (F102)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment (F103)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resources (F104)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring (F105)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Research (F107)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campus License</description>
        <label>Campus License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancellationDays__c</fullName>
        <inlineHelpText>Days prior to contract end date for action or notice to cancel, renew, etc</inlineHelpText>
        <label>Notice/Cancellation (days prior)</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Value_Annual__c</fullName>
        <description>Calculates total annual cost under contract</description>
        <formula>Payment_Amount__c * of_Payments_Per_Year__c</formula>
        <inlineHelpText>Total annual cost of contract</inlineHelpText>
        <label>Contract Value (Annual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Unit__c</fullName>
        <inlineHelpText>Average cost per unit</inlineHelpText>
        <label>Cost Per Unit (Average)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateToBeNotified__c</fullName>
        <formula>IF(
  ISPICKVAL (CancellationDays__c, &quot;&quot;), 
  EndDate-30,
 (EndDate - VALUE(TEXT( CancellationDays__c )) - 30)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date to be Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysLeftOfContract__c</fullName>
        <formula>IF(EndDate &gt;= TODAY(), EndDate  - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left of Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepartmentContact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Individual responsible for vendor relationship</inlineHelpText>
        <label>Department Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DepartmentContact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Dept Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <inlineHelpText>Title of document (e.g., Services Agreement; Amendment No. 1; Statement of Work, etc)</inlineHelpText>
        <label>Document Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Termination__c</fullName>
        <inlineHelpText>Options or penalties for early termination of contract</inlineHelpText>
        <label>Early Termination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Cost__c</fullName>
        <inlineHelpText>If cost is calculated annually, what is the estimated annual cost of the contract?</inlineHelpText>
        <label>Estimated Cost (if annual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Annual__c</fullName>
        <description>Calculates estimated annual cost based on units purchased</description>
        <formula>Cost_Per_Unit__c * Total_Units__c</formula>
        <inlineHelpText>Estimated annual cost based on number of units purchased</inlineHelpText>
        <label>Estimated Cost (Annual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <inlineHelpText>If cost is calculated monthly, what is the estimated monthly cost of the contract?</inlineHelpText>
        <label>Estimated Cost (if monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_upon_Expiration__c</fullName>
        <inlineHelpText>Action to be taken for contract to expire or be renewed/extended</inlineHelpText>
        <label>Action (at expiration)</label>
        <picklist>
            <picklistValues>
                <fullName>Expire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew automatically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew with signed amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew upon payment of fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation only upon notice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinalNoticeDate__c</fullName>
        <formula>EndDate - VALUE(TEXT( CancellationDays__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Executive_Relationship_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Executive Relationship Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegalResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LegalResource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Keys__c</fullName>
        <label>License Keys</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Auto_Renewals__c</fullName>
        <inlineHelpText>Number of times contract renewals automatically</inlineHelpText>
        <label># of Auto Renewals</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Limit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NotificationDaysLeft__c</fullName>
        <formula>IF(FinalNoticeDate__c &gt;= TODAY(), FinalNoticeDate__c - TODAY(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Licenses__c</fullName>
        <label>Number of Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Cost__c</fullName>
        <label>One-Time Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <inlineHelpText>Date the contract originally began (prior to renewals or extensions)</inlineHelpText>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary or master contract to which an amendment or SOW is linked</inlineHelpText>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Changes</relationshipLabel>
        <relationshipName>ChildContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <inlineHelpText>Amount due for each payment</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contract is perpetual until canceled.</inlineHelpText>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Calculation__c</fullName>
        <inlineHelpText>Is cost calculated/estimated on a monthly or annual basis?</inlineHelpText>
        <label>Pricing Calculation</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Cost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_s_Covered__c</fullName>
        <inlineHelpText>Products covered by this agreement</inlineHelpText>
        <label>Product(s) Covered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>Program associated with contract</inlineHelpText>
        <label>Program (if applicable)</label>
        <picklist>
            <controllingField>Responsible_Department__c</controllingField>
            <picklistValues>
                <fullName>Teachers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Informatics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN to BSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelicensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBooks</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <inlineHelpText>Length (in months) that contract will run when renewed or extended</inlineHelpText>
        <label>Renewal Term (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <inlineHelpText>Identify the requirements for contract renewal (automatic, written notice, payment of fee etc)</inlineHelpText>
        <label>Renewal Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Department__c</fullName>
        <inlineHelpText>Department/Group responsible for contracted services</inlineHelpText>
        <label>Responsible Department</label>
        <picklist>
            <picklistValues>
                <fullName>Articulation &amp; Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities &amp; Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trademarks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there is a Statement of Work or Amendment on file</description>
        <inlineHelpText>Is there a Statement of Work (SOW) or Amendment?</inlineHelpText>
        <label>SOW/Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there is a signed contract on file</description>
        <inlineHelpText>Is there a signed contract on file?</inlineHelpText>
        <label>Signed Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Location associated with contract, if applicable (such as field experience or facilities)</inlineHelpText>
        <label>State (if applicable)</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Techincal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person responsible for carrying out the techincal duties associated with the contract.</description>
        <label>Techincal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Provision__c</fullName>
        <description>Provision of contract affecting the term</description>
        <inlineHelpText>What section(s) of the contract describes the term (length) of the contract?</inlineHelpText>
        <label>Term Provision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Cost_del__c</fullName>
        <formula>CASE(Pricing_Calculation__c,
&quot;Annual&quot;,  Estimated_Annual_Cost__c * 1,
&quot;Monthly&quot;, Estimated_Monthly_Cost__c * 12,
&quot;No Cost&quot;, 0,
null)</formula>
        <inlineHelpText>Calculate the total annual cost of a fixed contract</inlineHelpText>
        <label>Test Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Cost__c</fullName>
        <description>Annual or Monthly Estimated Cost + One-Time Cost</description>
        <formula>ContractTerm* 
(CASE(Pricing_Calculation__c,
&quot;Annual&quot;, Estimated_Annual_Cost__c /12,
&quot;Monthly&quot;, Estimated_Monthly_Cost__c,
&quot;No Cost&quot;, 0,0))
+ One_Time_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual or Monthly Estimated Cost + One-Time Cost</inlineHelpText>
        <label>Total Contract Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <inlineHelpText>Units purchased annually</inlineHelpText>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W_9__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there is a W-9 on file</description>
        <inlineHelpText>Is there a W-9 on file?</inlineHelpText>
        <label>W-9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Payments_Per_Year__c</fullName>
        <inlineHelpText>Number of payments due each year</inlineHelpText>
        <label># of Payments Per Year</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Responsible_Department__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.ContractAgreement,Contract.IT_Contract</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.STATUS_CODE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT_TERM</columns>
        <columns>COMPANY_SIGNED_DATE</columns>
        <columns>CUSTOMER_SIGNED_DATE</columns>
        <columns>OWNER_EXPIRATION_NOTICE</columns>
        <columns>CONTRACT.BILLING_STATE</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CONTRACT.LAST_UPDATE</columns>
        <columns>Responsible_Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>AmendmentContract</fullName>
        <active>true</active>
        <description>Amendment, SOW, Addendum, etc., to primary/master agreement</description>
        <label>Amendment/SOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContractAgreement</fullName>
        <active>true</active>
        <description>Primary contract/agreement (not an amendment, addendum, statement of work, etc)</description>
        <label>Contract/Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Addendum_SOW</fullName>
        <active>true</active>
        <description>IT Addendum, Amendment, SOW</description>
        <label>IT Addendum/SOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Contract</fullName>
        <active>true</active>
        <description>IT Contract/Agreement</description>
        <label>IT Contract</label>
    </recordTypes>
</CustomObject>